# Assignment

./: .gitignore  CMakeLists.txt  Makefile  adaptivetime.slurm  assignment  assignment-2018.c  nbody.cpp  nbody.h  nbody.slurm  omp  omp.slurm  params.py  params.txt  ref.bib  solution-step1.c  solution-step2.c  solution-step3.c  solution-step3.tex  solution-step3.xlsx  solution-step4.aux  solution-step4.bbl  solution-step4.bcf  solution-step4.blg  solution-step4.c  solution-step4.fdb_latexmk  solution-step4.fls  solution-step4.run.xml  solution-step4.tex  solution-step5.fdb_latexmk  solution-step5.fls  solution-step5.tex  solution-step6.c  solution-step6.optrpt  solution-step7.aux  solution-step7.fdb_latexmk  solution-step7.fls  solution-step7.tex  step4.txt  step6-10-1.txt  step6-10-16.txt  (+21 more)
